--- a/pets.html
+++ b/pets.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html ⚡>
+
+
 
 <head>
     <meta charset="utf-8">
@@ -180,26 +182,6 @@
             <amp-story-grid-layer template="vertical" class="bottom">
                 <p>Rabbits can learn to follow simple voice commands and come when called by name, and are curious and playful.</p>
             </amp-story-grid-layer>
-
-            <!---- Page 5 (Collage): 2 layers + animations-->
-            <!-- <amp-story-page id="page5">
-                <amp-story-grid-layer template="vertical" class="noedge">
-                    <div class="wrapper">
-                        <amp-img src="assets/cat.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in" animate-in-delay="0.4s">
-                        </amp-img>
-                        <amp-img src="assets/dog.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in" animate-in-delay="0.6s">
-                        </amp-img>
-                        <amp-img src="assets/bird.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in" animate-in-delay=".8s">
-                        </amp-img>
-                        <amp-img src="assets/rabbit.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in" animate-in-delay="1s">
-                        </amp-img>
-                    </div>
-                </amp-story-grid-layer>
-                <amp-story-grid-layer template="vertical" class="center-text">
-                    <p class="banner-text" animate-in="whoosh-in-right">Pets can lower your stress levels!</p>
-                </amp-story-grid-layer>
-            </amp-story-page> -->
-
         </amp-story-page>
     </amp-story>
 </body>
